Corrected English index.css: Delete the white scrollbar corner.
CalendarComponent:

- Mostly automatic Prettier changes.

- L64: Limit to ten events instead of two.

- L204: Add overflow-x-scroll and a max-height to maintain the height of the events box. Add a right padding to give the scrollbar some space.

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -423,4 +423,8 @@ body {
   ::-webkit-scrollbar-thumb:hover {
     background: rgba(155, 154, 154, 0.6);
   }
+
+  ::-webkit-scrollbar-corner {
+    background: transparent;
+  }
 }
